trying to fix weird scrollbar width issue on mobile

--- a/dev_blog/blog.css
+++ b/dev_blog/blog.css
@@ -164,7 +164,7 @@ body {
     }
 
     .sticky {
-        width: 100vw;
+        width: 105vw;
         height: 140px;
         margin-bottom: 0;
     }
@@ -187,6 +187,7 @@ body {
         margin-top: 0;
         height: 100%;
         align-items: center;
+        margin-right: 5vw;
 
     }
 
